Add detailed Java GC guide with G1 and references examples